#355: Upgraded to Java 17